✨ Introduz login para snlv

--- a/.env.example
+++ b/.env.example
@@ -29,3 +29,6 @@ VITE_BACKEND_WS_URL=wss://api.hoppscotch.io/graphql
 
 # Proxyscotch Access Token (Optional)
 # VITE_PROXYSCOTCH_ACCESS_TOKEN: <Token Set In Proxyscotch Server>
+
+# AZURE config
+VITE_TENANT_ID=f63aa350-de24-4f9f-872c-6658a017678a
