--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,10 +7,8 @@ jobs:
       - image: node:lts-alpine
     environment:
       VITE_BASE_URL: https://$DOMAIN_URL
-      # VITE_BACKEND_GQL_URL: https://$API_DOMAIN_URL/api/graphql
-      VITE_BACKEND_GQL_URL: http://15.229.9.230/graphql
-      # VITE_BACKEND_WS_URL: wss://$API_DOMAIN_URL/api/graphql/ws
-      VITE_BACKEND_WS_URL: ws://15.229.9.230/graphql/ws
+      VITE_BACKEND_GQL_URL: https://$API_DOMAIN_URL/api/graphql
+      VITE_BACKEND_WS_URL: wss://$API_DOMAIN_URL/api/graphql/ws
     steps:
       - checkout
       - run: echo "Installing dependencies"
@@ -38,12 +36,9 @@ jobs:
             pip3 install --upgrade pip
             pip3 install awscli
       - run:
-          name: Query AWS User Name
-          command: |
-            export AWS_USER_NAME=$(aws sts get-caller-identity --query 'Arn' --output text | cut -d/ -f2)
-      - run:
           name: Configure Git SSH connection
           # Necessário para que o Terraform possa baixar módulos do Github
+          # Não se aplica para esse projeto.
           command: |
             SSH_KEY_FILE=$(ls ~/.ssh | grep id_rsa | head -1)
             ssh-keyscan -t rsa github.com >> ~/.ssh/known_hosts
@@ -56,7 +51,7 @@ jobs:
             terraform init -backend-config="bucket=$TF_STATE_BUCKET" \
             -backend-config="key=hoppscotch/terraform.tfstate" \
             -backend-config="region=$TF_STATE_BUCKET_REGION"
-            terraform apply -auto-approve -var AWS_USER_NAME="$AWS_USER_NAME" -var DOMAIN_URL="$DOMAIN_URL"
+            terraform apply -auto-approve -var -var DOMAIN_URL="$DOMAIN_URL"
   update_S3:
     docker:
       - image: amazon/aws-cli:latest
@@ -71,7 +66,7 @@ jobs:
           name: Send build output to S3
           command: |
             cd ~/project/packages/hoppscotch-web/dist
-            aws s3 sync . s3://$DOMAIN_URL/ --acl public-read
+            aws s3 sync . s3://$DOMAIN_URL/
 workflows:
   update-s3:
     jobs:
