--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -51,7 +51,7 @@ jobs:
             terraform init -backend-config="bucket=$TF_STATE_BUCKET" \
             -backend-config="key=hoppscotch/terraform.tfstate" \
             -backend-config="region=$TF_STATE_BUCKET_REGION"
-            terraform apply -auto-approve -var -var DOMAIN_URL="$DOMAIN_URL"
+            terraform apply -auto-approve -var DOMAIN_URL="$DOMAIN_URL"
   update_S3:
     docker:
       - image: amazon/aws-cli:latest
