--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -5,10 +5,10 @@ jobs:
     description: Build the app
     docker:
       - image: node:lts-alpine
-        environment:
-          VITE_BASE_URL: https://${DOMAIN_URL}
-          VITE_BACKEND_GQL_URL: https://${API_DOMAIN_URL}/api/graphql
-          VITE_BACKEND_WS_URL: wss://${API_DOMAIN_URL}/api/graphql/ws
+    environment:
+      VITE_BASE_URL: 'https://"$DOMAIN_URL"'
+      VITE_BACKEND_GQL_URL: 'https://"$API_DOMAIN_URL"/api/graphql'
+      VITE_BACKEND_WS_URL: 'wss://"$API_DOMAIN_URL"/api/graphql/ws'
     steps:
       - checkout
       - run: echo "Installing dependencies"
@@ -51,7 +51,7 @@ jobs:
             terraform init -backend-config="bucket=$TF_STATE_BUCKET" \
             -backend-config="key=hoppscotch/terraform.tfstate" \
             -backend-config="region=$TF_STATE_BUCKET_REGION"
-            terraform apply -auto-approve -var -var DOMAIN_URL="$DOMAIN_URL"
+            terraform apply -auto-approve -var DOMAIN_URL="$DOMAIN_URL"
   update_S3:
     docker:
       - image: amazon/aws-cli:latest
