--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -15,7 +15,11 @@ jobs:
             echo 'export VITE_BACKEND_WS_URL=wss://"$API_DOMAIN_URL"/api/graphql/ws' >> $BASH_ENV
       - run: echo "Installing dependencies"
       - run: npm install -g pnpm
-      - run: pnpm install
+      - run:
+          name: Install dependencies
+          command: |
+            source $BASH_ENV
+            pnpm install
       - run:
           name: Build the app
           command: |
