--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -11,8 +11,8 @@ jobs:
           name: Set environment variables
           command: |
             echo export VITE_BASE_URL="https://$DOMAIN_URL" >> $BASH_ENV
-            echo export VITE_BACKEND_GQL_URL="https://$API_DOMAIN_URL/api/graphql" >> $BASH_ENV
-            echo export VITE_BACKEND_WS_URL="wss://$API_DOMAIN_URL/api/graphql/ws" >> $BASH_ENV
+            echo export VITE_BACKEND_GQL_URL="https://$API_DOMAIN_URL/graphql" >> $BASH_ENV
+            echo export VITE_BACKEND_WS_URL="wss://$API_DOMAIN_URL/graphql/ws" >> $BASH_ENV
       - run: echo "Installing dependencies"
       - run: npm install -g pnpm
       - run:
